# mcp-server-playground

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  README.md
examples/: calendar_data.rs  calendar_tool.rs  contacts_data.rs  contacts_tool.rs  initialize.rs
impl/: 01-foundation-plan.md  02-types-plan.md
spec/: api-analysis.md  definition.md
spec/apis/: 01-calendar-tool.yaml  02-contacts-tool.yaml
src/: error.rs  lib.rs  main.rs
src/calendar/: attachment.rs  attendee.rs  calendar_data.rs  calendar_metadata.rs  calendar_settings.rs  calendar_tool.rs  cost.rs  event.rs  location.rs  mod.rs  queries.rs  recurrence.rs  reminder.rs
src/contacts/: address.rs  contact.rs  contact_email.rs  contacts_data.rs  contacts_metadata.rs  contacts_tool.rs  mod.rs  phone_number.rs  queries.rs  social_profile.rs
src/mcp/: app_state.rs  handler.rs  mod.rs  server.rs  session.rs  sse_handler.rs  tool_registry.rs  tool_trait.rs
src/mcp/protocol/: call_tool_result.rs  error.rs  initialize_result.rs  jsonrpc.rs  list_tools_result.rs  mod.rs  notification.rs  request.rs  response.rs  server_info.rs  tool_definition.rs  types.rs
src/mcp/tools/: call_tool_params.rs  call_tool_result.rs  content.rs  input_schema.rs  list_tools_result.rs  mod.rs  tool_definition.rs  tool_registry.rs  tool_trait.rs
src/mcp/transport/: app_state.rs  message_query.rs  (+8 more)
tests/: calendar_tool_tests.rs  calendar_types_tests.rs  contacts_tool_tests.rs  contacts_types_tests.rs  error_tests.rs  handler_tests.rs  protocol_tests.rs  streamable_http_tests.rs  tool_registry_tests.rs  types_tests.rs
