[package]
name = "mcp-server-playground"
version = "0.1.0"
edition = "2024"
description = "An MCP Server in Rust with calendar and contacts tools (simulated data)"
license = "MIT"
repository = "https://github.com/franciscotbjr/mcp-server-playground"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal", "io-util"] }
tokio-stream = "0.1.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3.26.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
